Has a docker compose of cassandra and rabbitmq Loads cassandra schema and data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     image: 'bitnami/rabbitmq:latest'
     networks:
       - app-tier
+    ports:
+    - '5672:5672'
+    - '15672:15672'
 
   cassandra:
     image: 'bitnami/cassandra:latest'
