--- a/swagger/recipes.yaml
+++ b/swagger/recipes.yaml
@@ -3,23 +3,6 @@ info:
   title: Hello API
   version: "0.1"
 paths:
-  /greeting:
-    get:
-      operationId: api.greeting.say_hello
-      summary: Returns a greeting.
-      parameters:
-        - name: name
-          in: query
-          type: string
-      responses:
-        200:
-          description: Successful response.
-          schema:
-            type: object
-            properties:
-              message:
-                type: string
-                description: Message greeting
   /recipes/:
     get:
       operationId: api.recipes.get_recipes
@@ -31,6 +14,21 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Recipe'
+    put:
+      operationId: api.recipesupdate.create_recipe
+      summary: Creates or updates a recipe
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: recipe
+          description: Recipe to create
+          schema:
+            $ref: '#/definitions/Recipe'
+      responses:
+        201:
+          description: Creation has started
+
 
 definitions:
   Recipe:
@@ -38,5 +36,7 @@ definitions:
     properties:
       id:
         type: string
+        example: 'f8b05fa2-3b59-4e55-b4f8-978e0ad01d0c'
       name:
         type: string
+        example: 'Chop Suey'
