--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,16 @@ networks:
     driver: bridge
 
 services:
-  web:
-    build: .
-    command: connexion run swagger/recipes.yaml -v --debug
-    depends_on:
-      - rabbitmq
-      - cassandra
-    volumes:
-      - ./src:/usr/src/app
-    ports:
-      - '5000:5000'
+#  web:
+#    build: .
+#    command: connexion run swagger/recipes.yaml -v --debug
+#    depends_on:
+#      - rabbitmq
+#      - cassandra
+#    volumes:
+#      - ./src:/usr/src/app
+#    ports:
+#      - '5000:5000'
 
   rabbitmq:
     image: 'bitnami/rabbitmq:latest'
